Fixed the size of the left navigation bar to be responsive when switching to phone mode but to be constant else. Created the layout for the main chat section, with float for the profile image inside of a message. Placed the textarea and button as well as positionning them. Added a user profile image in the header that changed to a div with header app class. The layout works well unti 270px width. Tried to style the scrollbars but have not succeeded yet.

--- a/Model 2/style.css
+++ b/Model 2/style.css
@@ -1,6 +1,4 @@
 @import url("resetCSS.css");
-@import url('https://fonts.googleapis.com/css2?family=Puritan:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Puritan:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu+Condensed&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mallanna&family=Puritan:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu+Condensed&display=swap');
 
 
@@ -23,6 +21,7 @@ main {
     /* font-family: "Ubuntu Condensed","Puritan-bold", sans-serif; */
 }
 
+/* ----------Left Side & Navigation Bar -------- */
 #menu-btn {
     background-color: #37393b;
     border: none;
@@ -30,13 +29,13 @@ main {
     top: 20px;
     left: 20px;
     cursor: pointer;
+    border-radius: 50%;
 }
 
 #product-name {
     position: fixed;
-    top: 15px;
-    left: 80px;
-    /* margin-top: 10px; */
+    top: 10px;
+    left: 100px;
     font-size: 30px;
 }
 
@@ -45,34 +44,29 @@ main {
 }
 
     
-.visible {
-    width: 70vw;
-    left: -45px;
-    transition: left 0.03s cubic-bezier(.5,.01,.53,.97), width 1s ease;
-}
-
-.invisible {
-    width: 5vw;
-    left: -200px;
-    transition: left 0.01s cubic-bezier(1,0,.32,.97), width 1s ease;
-}
-
-
 .navigation {
     background-color: #37393b;
     height: 100vh;
     position: fixed;
+    transition: left 1s cubic-bezier(1,0,.32,.97), width 0.8s ease;
+    left: 0;
 }
 
+.visible {
+    max-width: 260px;
+    width: 22vw;
+}
+
+.invisible {
+    max-width: 260px;
+    width: 80px;
+}
 
 #menu-btn:hover {
     background-color: #2a2a2a;
-    border-radius: 50%;
     transition: background-color 0.5s ease;
 }
-
-
-
+/* --------------- Chat Part ----------- */
 .right-side {
     background-color: antiquewhite;
     flex-grow: 1;
@@ -80,12 +74,113 @@ main {
 
 .app-header {
     background-color: #2a2a2a;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    min-width: 270px;
     height: 80px;
 }
 
-@media (min-width: 730px) {
+#user {
+    display: inline;
+    float: right;
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+}
 
-    
+.main-chat {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.text-zone {
+    height: 80vh;
+}
+
+.chat-zone {
+    margin: 0 20px;
+    list-style-type: none;
+    overflow: auto;
+}
+
+.profile-picture {
+    float: left;
+    margin: 10px 10px 0px 0px;
+}
+
+.text-zone {
+    background-color: aqua;
+    overflow: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.input-zone {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 10px;
+}
+
+#input-text-field {
+    background-color: #797a7c;
+    color: black;
+    border: none;
+    border-radius: 10% 10% 10% 10% / 10% 10% 10% 10%;
+    width: 600px;
+    max-width: 80vw;
+    min-height: 120px;
+    max-height: 120px;
+    margin: 10px 10px 0 20px;
+    resize: none;
+    outline: none;
+    padding-left: 20px;
+    padding-top: 10px;
+    overflow-y: scroll;
+}
+
+input[type ="button"] {
+    margin: 0 20px 0 10px;
+    width: 50px;
+    height: 50px;
+    border: none;
+    border-radius: 50% 50% 50% 50% / 50% 50% 50% 50% ;
+    background-color: #37393b;
+}
+
+input[type ="button"]:hover {
+    cursor: pointer;
+    background-color: #2a2a2a;
+}
+
+input[type ="button"]:active {
+    background-color: #0a0a0a;
+}
+
+textarea::-webkit-scrollbar-track {
+    /* Target WebKit browsers first, then Mozilla based browsers (like Firefox) and finally standard compliant browsers (like recent versions of IE/Edge)*/
+    background: red;
+    border-radius: 20px;
+  }
+
+textarea::-webkit-scrollbar-thumb {
+    /* Target WebKit browsers first, then Mozilla based browsers (like Firefox) and finally standard compliant browsers (like recent versions of IE/Edge)*/
+    background-color: red;
+    color: yellow;
+  }
+
+  textarea::-webkit-scrollbar-button, textarea::-moz-scrollbar-button, textarea::-scrollbar-button {
+    /* Target WebKit browsers first, then Mozilla based browsers (like Firefox) and finally standard compliant browsers (like recent versions of IE/Edge)*/
+    background-color: red;
+    color: red;
+  }
+ 
+@media (min-width: 960px) {
+
     .main-chat {
         background-color: rgb(179, 100, 4);
         height: calc(100vh - 80px);
@@ -93,19 +188,34 @@ main {
         margin: 0 auto;
     }
 
-
 }
 
-@media (max-width: 730px) {
+@media (max-width: 960px) {
 
     .main-chat {
         background-color: rgb(162, 179, 4);
         height: calc(100vh - 80px);
-        width: 100vw;
+        width: 95vw;
         margin: 0 auto;
     }
 
+    .invisible {
+        max-width: none;
+        width: 0vw;
+    }
+
     .visible {
+        max-width: none;
         width: 90vw;
+    }
+
+    #input-text-field {
+        min-width: 50vw;
+    }
+
+    input[type ="button"] {
+        margin: 0;
+        min-width: 50px;
+        min-height: 20px;
     }
 }
